Name:                hssqlppp-make-website
Version:             0.6.2
Build-Type:          Simple
Cabal-Version:       >=1.10

Description:         the exe to build the hssqlppp website

executable MakeWebsite
  main-is:             MakeWebsite.lhs
  other-modules:       TestFileProcessor
                       Database.HsSqlPpp.Tests.TypeChecking.Rewrites
                       Database.HsSqlPpp.Tests.TypeChecking.PrecisionAndNullable
                       Database.HsSqlPpp.Tests.TypeChecking.TrefIdentifiers
                       Database.HsSqlPpp.Tests.TypeChecking.ImplicitCasts
                       Database.HsSqlPpp.Tests.TypeChecking.Joins
                       Database.HsSqlPpp.Tests.TypeChecking.Tpch
                       Database.HsSqlPpp.Tests.TypeChecking.Aggregates
                       Database.HsSqlPpp.Tests.TypeChecking.TypeCheckTests
                       Database.HsSqlPpp.Tests.TypeChecking.ScalarExprs
                       Database.HsSqlPpp.Tests.TypeChecking.Issues
                       Database.HsSqlPpp.Tests.TypeChecking.CaseExpressions
                       Database.HsSqlPpp.Tests.TypeChecking.SimpleQueryExprs
                       Database.HsSqlPpp.Tests.TypeChecking.TSQL
                       Database.HsSqlPpp.Tests.Parsing.CreateTable
                       Database.HsSqlPpp.Tests.Parsing.Plpgsql
                       Database.HsSqlPpp.Tests.Parsing.LexerTests
                       Database.HsSqlPpp.Tests.Parsing.MiscDdl
                       Database.HsSqlPpp.Tests.Parsing.CombineQueryExprs
                       Database.HsSqlPpp.Tests.Parsing.Joins
                       Database.HsSqlPpp.Tests.Parsing.Misc
                       Database.HsSqlPpp.Tests.Parsing.Oracle
                       Database.HsSqlPpp.Tests.Parsing.MiscQueryExprs
                       Database.HsSqlPpp.Tests.Parsing.SelectLists
                       Database.HsSqlPpp.Tests.Parsing.ScalarExprs
                       Database.HsSqlPpp.Tests.Parsing.Utils
                       Database.HsSqlPpp.Tests.Parsing.Dml
                       Database.HsSqlPpp.Tests.Parsing.FunctionsDdl
                       Database.HsSqlPpp.Tests.Parsing.SqlServer
                       Database.HsSqlPpp.Tests.Parsing.ParserTests
                       Database.HsSqlPpp.Tests.Parsing.TableRefs
                       Database.HsSqlPpp.Tests.TestUtils
                       Database.HsSqlPpp.Tests.TpchData
                       Database.HsSqlPpp.Utils.Here

  build-depends:       base >= 4 && < 5,
                       filepath,
                       haskell-src-exts,
                       uniplate,
                       -- parsec,
                       pandoc,
                       -- pandoc-types,
                       -- blaze-html,
                       directory,
                       --datetime,
                       time,
                       -- mtl,
                       -- syb,
                       -- attoparsec,
                       text,
                       filemanip,
                       old-locale,
                       -- containers,
                       template-haskell,
                       pretty-show,
                       blaze-markup,
                       highlighting-kate,
                       hssqlppp,
                       hssqlppp-th
  default-language:    Haskell2010
  ghc-options:         -Wall
