Name:                hssqlppp-extras
Version:             0.4.2
Synopsis:            SQL parser and type checker
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10
copyright:           Copyright 2009-2014 Jake Wheat
stability:           pre-alpha
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database,Language
Description:
    SQL parser and type checker, targets PostgreSQL SQL and PL/pgSQL.
    .
    Documentation, examples on the homepage:
    <http://jakewheat.github.com/hssqlppp/>.
    .
    Changes here: <https://github.com/JakeWheat/hssqlppp/blob/master/CHANGES>

Flag devutils
  Description: Build devutils
  Default:     False

Flag examples
  Description: Build examples
  Default:     False


source-repository head
  type:     git
  location: https://github.com/JakeWheat/hssqlppp.git

executable h7c
  main-is:             h7c.lhs
  hs-source-dirs:      ../src,
                       h7c,
                       chaos/extensions,
                       extensions,
                       util
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell,
                       HUnit >= 1.2 && < 1.3,
                       test-framework >= 0.8 && < 0.9,
                       test-framework-hunit >= 0.3 && < 0.4
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(devutils)
    buildable:         True
  else
    buildable:         False

executable MakeDefaultTemplate1Catalog
  main-is:             MakeDefaultTemplate1Catalog.lhs
  hs-source-dirs:      ../src,
                       devel-util,
                       util
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell,
                       groom >= 0.1 && < 0.2,
                       HDBC >= 2.4 && < 2.5,
                       HDBC-postgresql >= 2.3 && < 2.4
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(devutils)
    buildable:         True
  else
    buildable:         False

executable FixSqlServerTpchSyntax
  main-is:             FixSqlServerTpchSyntax.lhs
  hs-source-dirs:      ../src,
                       examples
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(examples)
    buildable:         True
  else
    buildable:         False

executable MakeSelect
  main-is:             MakeSelect.lhs
  hs-source-dirs:      ../src,
                       examples
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(examples)
    buildable:         True
  else
    buildable:         False

executable Parse
  main-is:             Parse.lhs
  hs-source-dirs:      ../src,
                       examples
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(examples)
    buildable:         True
  else
    buildable:         False

executable Parse2
  main-is:             Parse2.lhs
  hs-source-dirs:      ../src,
                       examples
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell,
                       haskell-src-exts >= 1.15 && < 1.16
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(examples)
    buildable:         True
  else
    buildable:         False

executable QQ
  main-is:             QQ.lhs
  hs-source-dirs:      ../src,
                       examples
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(examples)
    buildable:         True
  else
    buildable:         False

executable ShowCatalog
  main-is:             ShowCatalog.lhs
  hs-source-dirs:      ../src,
                       examples
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell,
                       groom >= 0.1 && < 0.2
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(examples)
    buildable:         True
  else
    buildable:         False

executable TypeCheck
  main-is:             TypeCheck.lhs
  hs-source-dirs:      ../src,
                       examples
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(examples)
    buildable:         True
  else
    buildable:         False

executable TypeCheckDB
  main-is:             TypeCheckDB.lhs
  hs-source-dirs:      ../src,
                       examples,
                       util
  Build-Depends:       base >=4.6 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       containers >= 0.3.0.0 && < 0.6,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.1 && < 1.2,
                       syb >= 0.4 && < 0.5,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       template-haskell,
                       HDBC >= 2.4 && < 2.5,
                       HDBC-postgresql >= 2.3 && < 2.4
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(examples)
    buildable:         True
  else
    buildable:         False

-- this needs fixing to use pandoc properly and replace the
-- illuminate stuff with pandoc again
-- executable DevelTool
--   main-is:             DevelTool.lhs
--   hs-source-dirs:      ../src,
--                        tosort/util,
--                        util,
--                        tests
--   Build-Depends:       base >=4.6 && <4.8,
--                        mtl >= 2.2 && < 2.3,
--                        containers >= 0.3.0.0 && < 0.6,
--                        parsec >= 3.1 && < 3.2,
--                        pretty >= 1.1 && < 1.2,
--                        syb >= 0.4 && < 0.5,
--                        uniplate >= 1.6 && < 1.7,
--                        transformers >= 0.4 && < 0.5,
--                        template-haskell,
--                        filemanip >= 0.3 && < 0.4,
--                        groom >= 0.1 && < 0.2,
--                        haskell--exts >= 1.15 && < 1.16,
--                        pandoc >= 1.13 && < 1.14,
--                        xhtml >= 3000.2 && < 3000.3,
--                        filepath >= 1.3 && < 1.4,
--                        directory >= 1.2 && < 1.3,
--                        datetime >= 0.2.1 && < 0.3,
--                        HUnit >= 1.2 && < 1.3,
--                        test-framework >= 0.8 && < 0.9,
--                        test-framework-hunit >= 0.3 && < 0.4
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   if flag(devutils)
--     buildable:         True
--   else
--     buildable:         False
