Name:                h7c
Version:             0.3.2
Synopsis:            SQL 'compiler' utility using hssqlppp
License:             BSD3
Author:              Jake Wheat
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.6
copyright:           Copyright 2009-2011 Jake Wheat
stability:           pre-alpha
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database,Compiler
Description:
    Library for using hssqlppp as compiler for SQL.

source-repository head
  type:     git
  location: https://github.com/JakeWheat/hssqlppp.git


Library
  Build-Depends:     base >= 4 && < 5,
                     mtl >= 2.0.1.0 && < 2.1,
                     containers >= 0.3.0.0 && < 0.5,
                     parsec >= 3.1 && < 3.2,
                     pretty >= 1.1 && < 1.2,
                     syb >= 0.1.0.2 && < 0.4,
                     uniplate >= 1.6 && < 1.7,
                     transformers >= 0.2.2.0 && < 0.3,
                     template-haskell,
                     test-framework >= 0.4.1.1 && < 0.5,
                     groom >= 0.1 && < 0.2,
                     test-framework-hunit >= 0.2.6 && < 0.3,
                     HUnit >= 1.2.2.3 && < 1.3,
                     filepath >= 1.2.0 && < 1.3,
                     hssqlppp == 0.3.2
  exposed-modules:   Database.HsSqlPpp.H7c

  extensions:        TupleSections
                     DeriveDataTypeable,
                     ScopedTypeVariables,
                     PatternGuards,
                     QuasiQuotes
