Name:                hssqlppp-tests
Version:             0.4.0
Synopsis:            tests for hssqlppp
License:             BSD3
Author:              Jake Wheat
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.6
copyright:           Copyright 2009-2011 Jake Wheat
stability:           pre-alpha
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database
Description:
    tests for hssqlppp package


Executable Tests
  Main-Is:           Tests.lhs
  hs-source-dirs:    .,../util,../examples
  Build-Depends:     base >= 4 && < 5,
                     syb >= 0.1.0.2 && < 0.4,
                     uniplate >= 1.6 && < 1.7,
                     template-haskell,
                     test-framework >= 0.4.1.1 && < 0.5,
                     groom >= 0.1 && < 0.2,
                     test-framework-hunit >= 0.2.6 && < 0.3,
                     HUnit >= 1.2.2.3 && < 1.3,
                     hssqlppp == 0.4.0

  extensions:        TupleSections
                     DeriveDataTypeable,
                     ScopedTypeVariables,
                     PatternGuards,
                     QuasiQuotes
